--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
     "deploy": "script/deploy",
@@ -37,7 +38,7 @@
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/hands": "^0.4.1635986972",
-    "axios": "^0.19.0",
+    "axios": "^1.7.2",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
@@ -71,7 +72,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "axios-mock-adapter": "^1.16.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
@@ -80,10 +81,10 @@
     "eslint-config-fullstack": "^6.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.12.4",
-    "git-url-parse": "^11.1.2",
-    "lint-staged": "^8.1.5",
-    "mocha": "^6.1.4",
-    "nodemon": "^1.18.3",
+    "git-url-parse": "^14.0.0",
+    "lint-staged": "^15.2.5",
+    "mocha": "^10.4.0",
+    "nodemon": "^3.1.3",
     "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
     "react-test-renderer": "^16.4.2",
@@ -95,4 +96,3 @@
     "yaml": "^1.6.0"
   }
 }
-
